--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,13 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+body{
+    background-color: green;
+}
+
+h1{
+    font-size: 80px;
+}
+
+#botSuit{
+    transform: scaleY(-1);
+}
